# CRM-HCP-AI-AGENT

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/ai_first_crm_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/agents/: orchestrator.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/database/: session.py
backend/app/langgraph/: graph.py
backend/app/models/: customer.py
backend/app/tools/: crm_tools.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: styles.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/features/counter/: counterSlice.ts
frontend/src/pages/: HomePage.tsx
