[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-first-crm-backend"
version = "0.1.0"
description = "FastAPI backend for AI-first CRM"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "langgraph>=0.2.0",
  "langchain-groq>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "python-dotenv>=1.0.1",
  "pymysql>=1.1.0",
]
[tool.setuptools.packages.find]
where = ["."]
